# SE4AI-seminar-calibrate-then-evaluate

./: README.md  pyproject.toml
data/: calibration_pairs.jsonl  eval_items.jsonl
examples/: demo_biased_judge.py
reports/: calibration.json  evaluation.json
scripts/: generate_sample_data.py
src/calibrate_then_evaluate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cte/: __init__.py  calibration.py  cli.py  evaluation.py  judge.py
tests/: test_pipeline.py
