[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calibrate-then-evaluate"
version = "0.1.0"
description = "Reference implementation of the Calibrate-Then-Evaluate protocol for reliable LLM evaluation in CI/CD pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Firas Mosbeh" }]
dependencies = []  # core pipeline + MockJudge are dependency-free by design

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=8"]

[project.scripts]
cte = "cte.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
